# FMIKit-Simulink

./: .clang-format  CMakeLists.txt  azure-pipelines.yml  build.bat  sfun_fmurun.cpp
Java/src/main/java/fmikit/ui/: FMUBlockDialog.form  FMUBlockDialog.java
grtfmi/: CMakeLists.txt  fmi2Functions.c  grtfmi.tlc  grtfmi_cmake_default_generator.m  grtfmi_make_rtw_hook.m  grtfmilib.tlc  grtfmixml.tlc
include/: FMU.h
rtwsfcnfmi/m/: rtwsfcnfmi_tmf.m
rtwsfcnfmi/tlc/: rtwsfcnfmi.tlc  rtwsfcnfmi_18b_vcx64.tmf
src/: FMU.cpp  FMU1.cpp  FMU2.cpp
